[gd_scene load_steps=11 format=3 uid="uid://bc0sc1t1gdja4"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_ntgxl"]
[ext_resource type="Script" path="res://Scripts/States/Player/PlayerStateMachine.gd" id="2_8yjh4"]
[ext_resource type="Script" path="res://Scripts/States/Player/RunState.gd" id="3_uyf1r"]
[ext_resource type="Script" path="res://Scripts/States/Player/AirState.gd" id="4_d8gs3"]
[ext_resource type="Script" path="res://Scripts/StateDubugLabel.gd" id="5_fai0a"]
[ext_resource type="Script" path="res://Scripts/States/Player/DashState.gd" id="5_pltby"]
[ext_resource type="Script" path="res://Scripts/PlayerAction.gd" id="6_uoquc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h3myt"]
radius = 31.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eceab"]
radius = 12.0
height = 38.0

[sub_resource type="CanvasTexture" id="CanvasTexture_70t8f"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("jump_state", "dash_state", "right", "left", "jump", "dash")]
script = ExtResource("1_ntgxl")
jump_state = NodePath("PlayerStateMachine/Air")
dash_state = NodePath("PlayerStateMachine/Dash")
right = NodePath("Controls/RightAction")
left = NodePath("Controls/LeftAction")
jump = NodePath("Controls/JumpAction")
dash = NodePath("Controls/DashAction")

[node name="Touch" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Touch"]
shape = SubResource("CapsuleShape2D_h3myt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eceab")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(22.1352, -31.7975)
texture = SubResource("CanvasTexture_70t8f")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("player", "current_state")]
script = ExtResource("2_8yjh4")
player = NodePath("..")
current_state = NodePath("Air")

[node name="Run" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("air_state")]
script = ExtResource("3_uyf1r")
air_state = NodePath("../Air")

[node name="Air" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("run_state")]
script = ExtResource("4_d8gs3")
run_state = NodePath("../Run")

[node name="Dash" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_pltby")

[node name="StateDubugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -49.0
offset_top = -56.0
offset_right = 79.0
offset_bottom = -30.0
text = "State: "
script = ExtResource("5_fai0a")
state_machine = NodePath("../PlayerStateMachine")

[node name="Controls" type="Node" parent="."]

[node name="RightAction" type="Node" parent="Controls"]
script = ExtResource("6_uoquc")

[node name="JumpAction" type="Node" parent="Controls"]
script = ExtResource("6_uoquc")

[node name="DashAction" type="Node" parent="Controls"]
script = ExtResource("6_uoquc")

[node name="LeftAction" type="Node" parent="Controls"]
script = ExtResource("6_uoquc")

[connection signal="body_entered" from="Touch" to="." method="_on_touch_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
